--- a/html/accessing-forms.html
+++ b/html/accessing-forms.html
@@ -26,14 +26,15 @@
         </div>
       </form>
     </section>
-    <section class="row">
+    <section class="row mt-4">
+      <h3>Name List</h3>
       <div class="col">
         <ul id="names-list">
 <!-- 
   Add code to the JavaScript file which, when the "Add name" button is clicked on
   adds the name in the text field to this unordered list as the last item.
   You should be able to add one name at a time.
- -->
+-->
 
         </ul>
       </div>
